test_suite/tests/ui/duplicate-attribute/with-and-serialize-with.stderr
error: duplicate serde attribute `serialize_with`
 --> tests/ui/duplicate-attribute/with-and-serialize-with.rs:5:25
  |
3 | #[derive(Serialize)]
  |          --------- in this derive macro expansion
4 | struct S {
5 |     #[serde(with = "w", serialize_with = "s")]
  |                         ^^^^^^^^^^^^^^
  |
  = note: this error originates in the derive macro `Serialize` (in Nightly builds, run with -Z macro-backtrace for more info)
